--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comverso",
+  "name": "saas-anatomy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,33 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.1.6",
+    "@portabletext/react": "^6.0.2",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@sanity/client": "^7.14.1",
+    "@sanity/vision": "^5.7.0",
+    "@types/mdx": "^2.0.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.30.0",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-sanity": "^12.0.16",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "reading-time": "^1.5.0",
+    "recharts": "2.15.4",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "sanity": "^5.7.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -21,6 +45,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
