--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.1.6",
     "@portabletext/react": "^6.0.2",
+    "@portabletext/types": "^4.0.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@sanity/client": "^7.14.1",
-    "@sanity/vision": "^5.7.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.22.0",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.30.0",
     "gray-matter": "^4.0.3",
+    "groq": "^5.7.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
-    "next-sanity": "^12.0.16",
+    "next-sanity": "^11.6.12",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -34,7 +37,8 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
-    "sanity": "^5.7.0",
+    "sanity": "^4.22.0",
+    "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
