--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.1.6",
+    "@next/third-parties": "^16.1.6",
     "@portabletext/react": "^6.0.2",
     "@portabletext/types": "^4.0.1",
     "@radix-ui/react-icons": "^1.3.2",
