--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "remark-html": "^16.0.1",
     "sanity": "^4.22.0",
     "styled-components": "^6.3.8",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
