Update package.json and pnpm-lock.yaml to add new dependencies: @neondatabase/serverless, cheerio, drizzle-orm, openai, and drizzle-kit. Enhance sitemap with a new landing page analyzer tool link and improve button styles for better user interaction.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@getbrevo/brevo": "^3.0.1",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
+    "@neondatabase/serverless": "^1.0.2",
     "@next/mdx": "^16.1.6",
     "@next/third-parties": "^16.1.6",
     "@portabletext/react": "^6.0.2",
@@ -21,14 +22,17 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
     "@types/mdx": "^2.0.13",
+    "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.30.0",
     "gray-matter": "^4.0.3",
     "groq": "^5.7.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-sanity": "^11.6.12",
+    "openai": "^6.21.0",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -48,6 +52,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
