--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "disposable-email-domains": "^1.0.62",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.30.0",
     "gray-matter": "^4.0.3",
@@ -45,7 +46,8 @@
     "sanity": "^4.22.0",
     "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0",
-    "web-vitals": "^5.1.0"
+    "web-vitals": "^5.1.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
