--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "groq": "^5.7.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-intl": "^4.8.2",
     "next-sanity": "^11.6.12",
     "openai": "^6.21.0",
     "radix-ui": "^1.4.3",
