--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-intl": "^4.8.2",
     "next-sanity": "^11.6.12",
     "openai": "^6.21.0",
+    "playwright-core": "^1.58.2",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
